--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@
 }
 
 .y6 {
-  background-color: #5A98C0;
+  background-color: #5a98c0;
 }
 
 #landing {
@@ -30,35 +30,42 @@
 #landing .landing-page {
   height: 100vh;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #000;
   background-image: url(https://picsum.photos/1920/500);
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-animation: blur 2s ease-out;
-          animation: blur 2s ease-out;
+  -webkit-animation: blur 1s ease-out;
+          animation: blur 1s ease-out;
 }
 #landing h1 {
-  display: block;
-  color: #C7C7C7;
+  color: #fff;
   font-size: 8rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-#landing h1 div {
-  display: block;
   text-align: right;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  line-height: 1.2;
+  margin: 0 auto;
 }
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (min-width: 769px) and (max-width: 991px) {
   #landing h1 {
     font-size: 6rem;
   }
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   #landing h1 {
-    font-size: 3rem;
+    font-size: 4rem;
+  }
+}
+@media all and (max-width: 414px) {
+  #landing h1 {
+    font-size: 2rem;
   }
 }
 #landing .welcome {
@@ -66,10 +73,10 @@
   height: 224px;
   cursor: pointer;
   position: absolute;
-  bottom: 115px;
+  bottom: 10vh;
   left: 14vw;
 }
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (min-width: 769px) and (max-width: 991px) {
   #landing .welcome {
     width: 180px;
     height: 180px;
@@ -77,7 +84,7 @@
     left: 10vw;
   }
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   #landing .welcome {
     width: 150px;
     height: 150px;
@@ -105,13 +112,13 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (min-width: 769px) and (max-width: 991px) {
   #landing .welcome .mouse {
     width: 29px;
     height: 48px;
   }
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   #landing .welcome .mouse {
     width: 26px;
     height: 45px;
@@ -120,18 +127,18 @@
 #landing .welcome .mouse .scroller {
   width: 3px;
   height: 8px;
-  border: 1px solid rgb(233, 233, 233);
+  border: 1px solid #fff;
   border-radius: 25%;
   position: absolute;
   top: 13px;
   left: 14px;
 }
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (min-width: 769px) and (max-width: 991px) {
   #landing .welcome .mouse .scroller {
     left: 12px;
   }
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   #landing .welcome .mouse .scroller {
     left: 11px;
   }
@@ -139,14 +146,18 @@
 
 .start-scroll #landing .landing-page {
   height: 0;
-  -webkit-transition: height 1s cubic-bezier(0.76, -0.24, 0.55, 0.91);
-  transition: height 1s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  -webkit-transition: height 0.8s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  transition: height 0.8s cubic-bezier(0.76, -0.24, 0.55, 0.91);
   -webkit-transform-origin: top center;
           transform-origin: top center;
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
 }
 .start-scroll #landing h1,
 .start-scroll #landing .welcome {
-  display: none;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91);
 }
 .start-scroll nav {
   opacity: 1;
@@ -164,6 +175,9 @@
 .showing-list .poster img {
   border-radius: 10px;
   width: 100%;
+}
+.showing-list .movie-level {
+  margin-right: 10px;
 }
 
 .onlinebook .select-box {
@@ -184,15 +198,15 @@
   border-radius: 5px;
   padding: 0 10px;
   background-color: transparent;
-  color: #C7C7C7;
+  color: #fff;
   border: 1px solid rgb(190, 190, 190);
   margin-left: 10px;
 }
 .onlinebook .select-box select option {
   background-color: #000;
-  color: #C7C7C7;
+  color: #fff;
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   .onlinebook .select-box {
     padding-right: 0;
   }
@@ -204,7 +218,7 @@
   display: flex;
   margin-bottom: 20px;
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   .lastestnew .news-box > a {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -226,7 +240,7 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   .lastestnew .news-box .new-info {
     margin-left: 0px;
     margin-top: 15px;
@@ -236,7 +250,7 @@
   width: 60px;
   margin-left: 0;
   height: 1px;
-  background-color: #B9373C;
+  background-color: #b9373c;
   border: none;
   margin-bottom: 15px;
 }
@@ -247,9 +261,10 @@
 .movie-item:first-of-type {
   margin-right: 50px;
 }
-@media all and (max-width: 769px) {
+@media all and (max-width: 768px) {
   .movie-item:first-of-type {
     margin-right: 0;
+    margin-bottom: 15px;
   }
 }
 .movie-item img {
@@ -257,7 +272,7 @@
 }
 .movie-item .up-date {
   margin: 10px 0 30px 0;
-  color: #B9373C;
+  color: #b9373c;
   font-weight: bold;
 }
 .movie-item .movie-level {
@@ -266,7 +281,7 @@
 .movie-item .book-btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #5A98C0;
+  background-color: #5a98c0;
   border-radius: 5px;
   margin-bottom: 30px;
   color: #000;
@@ -296,6 +311,11 @@
   padding: 2rem;
   text-align: center;
   margin-top: 50px;
+}
+@media all and (max-width: 768px) {
+  .trailer {
+    padding: 10px;
+  }
 }
 
 @-webkit-keyframes rotate {
