因手機板失效做修改

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -70,7 +70,7 @@
     height: 224px;
     cursor: pointer;
     position: absolute;
-    bottom: 10vh;
+    bottom: 120px;
     left: 14vw;
 
     @include v.pad-width {
