--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@
   height: 224px;
   cursor: pointer;
   position: absolute;
-  bottom: 10vh;
+  bottom: 120px;
   left: 14vw;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
