--- a/css/index.css
+++ b/css/index.css
@@ -60,12 +60,12 @@
 }
 @media all and (max-width: 768px) {
   #landing h1 {
-    font-size: 4rem;
+    font-size: 5rem;
   }
 }
 @media all and (max-width: 414px) {
   #landing h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 }
 #landing .welcome {
@@ -73,7 +73,7 @@
   height: 224px;
   cursor: pointer;
   position: absolute;
-  bottom: 120px;
+  top: 60%;
   left: 14vw;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
