--- a/scss/index.scss
+++ b/scss/index.scss
@@ -58,10 +58,10 @@
     }
 
     @include v.phone-width {
-      font-size: 4rem;
+      font-size: 5rem;
     }
     @include v.mini-width {
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
   }
 
@@ -70,7 +70,7 @@
     height: 224px;
     cursor: pointer;
     position: absolute;
-    bottom: 120px;
+    top: 60%;
     left: 14vw;
 
     @include v.pad-width {
