--- a/css/index.css
+++ b/css/index.css
@@ -145,14 +145,13 @@
 .start-scroll #landing .landing-page {
   -webkit-transform: translate3d(0, -100%, 0);
           transform: translate3d(0, -100%, 0);
-  -webkit-transition: -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85);
-  transition: -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85);
-  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85);
-  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85), -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85);
+  opacity: 0;
+  -webkit-transition: opacity 0.5s linear 1.2s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+  transition: opacity 0.5s linear 1.2s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s, opacity 0.5s linear 1.2s;
+  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s, opacity 0.5s linear 1.2s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
   -webkit-transform-origin: top center;
           transform-origin: top center;
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
 }
 .start-scroll #landing h1,
 .start-scroll #landing .welcome {
